Project

General

Profile

Actions

Bug #19554

closed

multisite: radosgw-admin period commands cant use --remote in another zonegroup

Added by Casey Bodley about 7 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

because RGWRados only initializes connections for zones in its own zonegroup, the --remote argument is unable to find zones in other zonegroups

period commit relies on this by passing the master zone's id as the remote

$ radosgw-admin period update --commit
Sending period to new master zone 2554ff93-3149-4e77-ab94-bfbff0493074
could not find connection for zone or zonegroup id: 2554ff93-3149-4e77-ab94-bfbff0493074
request failed: (2) No such file or directory
failed to commit period: (2) No such file or directory

a script to reproduce this failure:

mstart.sh c1 -n -d
mrun c1 radosgw-admin realm create --rgw-realm dev --default
mrun c1 radosgw-admin zonegroup create --rgw-zonegroup na --endpoints http://localhost:8000 --master --default
mrun c1 radosgw-admin zone create --rgw-zone na-1 --rgw-zonegroup na --endpoints http://localhost:8000 --access-key $RGW_ACCESS --secret $RGW_SECRET --master --default
mrun c1 radosgw-admin period update --commit
mrun c1 radosgw-admin user create --uid realm.admin --display-name 'Realm Admin' --access-key $RGW_ACCESS --secret $RGW_SECRET --system

mrgw.sh c1 8000 --debug-rgw 20 --debug-ms 1

mstart.sh c2 -n -d
mrun c2 radosgw-admin realm pull --rgw-realm dev --url http://localhost:8000 --access-key $RGW_ACCESS --secret $RGW_SECRET --default
mrun c2 radosgw-admin zonegroup create --rgw-zonegroup sa --endpoints http://localhost:8001 --default
mrun c2 radosgw-admin zone create --rgw-zone sa-1 --rgw-zonegroup sa --endpoints http://localhost:8001 --access-key $RGW_ACCESS --secret $RGW_SECRET --default
mrun c2 radosgw-admin period update --commit


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #20029: jewel: multisite: radosgw-admin period commands cant use --remote in another zonegroupRejectedCasey BodleyActions
Copied to rgw - Backport #20030: kraken: multisite: radosgw-admin period commands cant use --remote in another zonegroupRejectedActions
Actions #1

Updated by Ken Dreyer almost 7 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by Orit Wasserman almost 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20029: jewel: multisite: radosgw-admin period commands cant use --remote in another zonegroup added
Actions #4

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20030: kraken: multisite: radosgw-admin period commands cant use --remote in another zonegroup added
Actions #5

Updated by Nathan Cutler over 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF