radosgw-admin: commit_period gets remote connection from new period

Fixes: http://tracker.ceph.com/issues/19554

Signed-off-by: Casey Bodley <cbodley@redhat.com>